--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,15 @@
 {
-  "presets": [
-    ["env", { "modules": false }],
-    "stage-3"
+  "presets" : ["@babel/preset-env","@babel/preset-react"],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        // "absoluteRuntime": false,
+        "corejs": false,
+        // "helpers": true,
+        "regenerator": true,
+        // "useESModules": false
+      }
+    ]
   ]
 }
