--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "jest"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "@babel/runtime": "^7.14.0",
+    "vue": "^2.5.11",
+    "vuetify": "^2.5.1",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
@@ -18,18 +22,44 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@vue/test-utils": "^1.2.0",
+    "axios": "^0.21.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.0.1",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "jest": "^27.0.1",
+    "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
+    "webpack": "^3.12.0",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-serializer-vue"
+    ]
   }
 }
