--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
         // "absoluteRuntime": false,
         "corejs": false,
         // "helpers": true,
-        "regenerator": true,
+        "regenerator": true
         // "useESModules": false
       }
     ]
