--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "vue": "^2.5.11",
+    "vue-router": "^3.5.1",
     "vuetify": "^2.5.1",
     "vuex": "^3.6.2"
   },
